antlr/wenyanParser.py
# Generated from wenyan.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class wenyanParser ( Parser ):

    grammarFileName = "wenyan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\u592B'", "'\u4E4B'", "'\u5176\u9918'", 
                     "'\u9577'", "'\u929C'", "'\u5176'", "'\u5145'", "'\u65BD'", 
                     "'\u65BD\u5176'", "'\u53D6'", "'\u4EE5\u65BD'", "'\u543E\u6709'", 
                     "'\u8853'", "'\u6B32\u884C\u662F\u8853'", "'\u5FC5\u5148\u5F97'", 
                     "'\u66F0'", "'\u662F\u8853\u66F0'", "'\u4E43\u884C\u662F\u8853\u66F0'", 
                     "'\u662F\u8B02'", "'\u4E4B\u8853\u4E5F'", "'\u8005'", 
                     "'\u4ECA\u6709'", "'\u540D\u4E4B'", "'\u6709'", "'\u9664'", 
                     "'\u6614\u4E4B'", "'\u4ECA'", "'\u662F\u77E3'", "'\u4ECA\u4E0D\u5FA9\u5B58\u77E3'", 
                     "'\u4E43\u5F97'", "'\u4E43\u6B78\u7A7A\u7121'", "'\u4E43\u5F97\u77E3'", 
                     "'\u543E\u5617\u89C0'", "'\u4E4B\u66F8'", "'\u65B9\u609F'", 
                     "'\u4E4B\u7FA9'", "'\u7269'", "'\u5176\u7269\u5982\u662F'", 
                     "'\u7269\u4E4B'", "'\u4E4B\u7269\u4E5F'", "'\u66F8\u4E4B'", 
                     "'\u6CE8\u66F0'", "'\u758F\u66F0'", "'\u6279\u66F0'", 
                     "'\u566B'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\u6240\u9918\u5E7E\u4F55'", "'\u8B8A'", 
                     "'\u65BC'", "'\u4EE5'", "'\u82E5'", "'\u82E5\u975E'", 
                     "<INVALID>", "'\u51E1'", "'\u70BA\u662F'", "'\u6046\u70BA\u662F'", 
                     "'\u4E2D\u4E4B'", "'\u904D'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\u4E43\u6B62'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING_LITERAL", "IDENTIFIER", 
                      "ARITH_BINARY_OP", "LOGIC_BINARY_OP", "POST_MOD_MATH_OP", 
                      "UNARY_OP", "PREPOSITION_YU", "PREPOSITION_YI", "IF", 
                      "ELSE", "IF_LOGIC_OP", "FOR_START_ARR", "FOR_START_ENUM", 
                      "FOR_START_WHILE", "FOR_MID_ARR", "FOR_MID_ENUM", 
                      "FOR_IF_END", "FLOAT_NUM", "FLOAT_NUM_KEYWORDS", "INT_NUM", 
                      "INT_NUM_KEYWORDS", "TYPE", "BOOL_VALUE", "WS", "BREAK" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_pick_up_statement = 2
    RULE_array_statement = 3
    RULE_array_cat_statement = 4
    RULE_array_push_statement = 5
    RULE_function_statement = 6
    RULE_function_call_statement = 7
    RULE_function_plain_call = 8
    RULE_function_nested_call = 9
    RULE_function_define_statement = 10
    RULE_if_statement = 11
    RULE_if_expression = 12
    RULE_unary_if_expression = 13
    RULE_binary_if_expression = 14
    RULE_declare_statement = 15
    RULE_define_statement = 16
    RULE_reference_multi_statement = 17
    RULE_reference_single_statement = 18
    RULE_init_define_statement = 19
    RULE_for_statement = 20
    RULE_for_arr_statement = 21
    RULE_for_enum_statement = 22
    RULE_for_while_statement = 23
    RULE_math_statement = 24
    RULE_arith_math_statement = 25
    RULE_arith_binary_math = 26
    RULE_arith_unary_math = 27
    RULE_mod_math_statement = 28
    RULE_logic_math_statement = 29
    RULE_assign_statement = 30
    RULE_return_statement = 31
    RULE_import_statement = 32
    RULE_object_statement = 33
    RULE_object_define_statement = 34
    RULE_data = 35
    RULE_preposition = 36
    RULE_print_statement = 37
    RULE_comment = 38
    RULE_clean_statement = 39

    ruleNames =  [ "program", "statement", "pick_up_statement", "array_statement", 
                   "array_cat_statement", "array_push_statement", "function_statement", 
                   "function_call_statement", "function_plain_call", "function_nested_call", 
                   "function_define_statement", "if_statement", "if_expression", 
                   "unary_if_expression", "binary_if_expression", "declare_statement", 
                   "define_statement", "reference_multi_statement", "reference_single_statement", 
                   "init_define_statement", "for_statement", "for_arr_statement", 
                   "for_enum_statement", "for_while_statement", "math_statement", 
                   "arith_math_statement", "arith_binary_math", "arith_unary_math", 
                   "mod_math_statement", "logic_math_statement", "assign_statement", 
                   "return_statement", "import_statement", "object_statement", 
                   "object_define_statement", "data", "preposition", "print_statement", 
                   "comment", "clean_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    STRING_LITERAL=46
    IDENTIFIER=47
    ARITH_BINARY_OP=48
    LOGIC_BINARY_OP=49
    POST_MOD_MATH_OP=50
    UNARY_OP=51
    PREPOSITION_YU=52
    PREPOSITION_YI=53
    IF=54
    ELSE=55
    IF_LOGIC_OP=56
    FOR_START_ARR=57
    FOR_START_ENUM=58
    FOR_START_WHILE=59
    FOR_MID_ARR=60
    FOR_MID_ENUM=61
    FOR_IF_END=62
    FLOAT_NUM=63
    FLOAT_NUM_KEYWORDS=64
    INT_NUM=65
    INT_NUM_KEYWORDS=66
    TYPE=67
    BOOL_VALUE=68
    WS=69
    BREAK=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wenyanParser.StatementContext)
            else:
                return self.getTypedRuleContext(wenyanParser.StatementContext,i)


        def getRuleIndex(self):
            return wenyanParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = wenyanParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << wenyanParser.T__0) | (1 << wenyanParser.T__4) | (1 << wenyanParser.T__6) | (1 << wenyanParser.T__7) | (1 << wenyanParser.T__8) | (1 << wenyanParser.T__9) | (1 << wenyanParser.T__11) | (1 << wenyanParser.T__21) | (1 << wenyanParser.T__23) | (1 << wenyanParser.T__24) | (1 << wenyanParser.T__25) | (1 << wenyanParser.T__29) | (1 << wenyanParser.T__30) | (1 << wenyanParser.T__31) | (1 << wenyanParser.T__32) | (1 << wenyanParser.T__40) | (1 << wenyanParser.T__41) | (1 << wenyanParser.T__42) | (1 << wenyanParser.T__43) | (1 << wenyanParser.T__44) | (1 << wenyanParser.ARITH_BINARY_OP) | (1 << wenyanParser.UNARY_OP) | (1 << wenyanParser.IF) | (1 << wenyanParser.FOR_START_ARR) | (1 << wenyanParser.FOR_START_ENUM) | (1 << wenyanParser.FOR_START_WHILE))) != 0) or _la==wenyanParser.BREAK:
                self.state = 80
                self.statement()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_statement(self):
            return self.getTypedRuleContext(wenyanParser.Declare_statementContext,0)


        def define_statement(self):
            return self.getTypedRuleContext(wenyanParser.Define_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(wenyanParser.Print_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(wenyanParser.For_statementContext,0)


        def function_statement(self):
            return self.getTypedRuleContext(wenyanParser.Function_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(wenyanParser.If_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(wenyanParser.Return_statementContext,0)


        def math_statement(self):
            return self.getTypedRuleContext(wenyanParser.Math_statementContext,0)


        def assign_statement(self):
            return self.getTypedRuleContext(wenyanParser.Assign_statementContext,0)


        def import_statement(self):
            return self.getTypedRuleContext(wenyanParser.Import_statementContext,0)


        def object_statement(self):
            return self.getTypedRuleContext(wenyanParser.Object_statementContext,0)


        def pick_up_statement(self):
            return self.getTypedRuleContext(wenyanParser.Pick_up_statementContext,0)


        def array_statement(self):
            return self.getTypedRuleContext(wenyanParser.Array_statementContext,0)


        def clean_statement(self):
            return self.getTypedRuleContext(wenyanParser.Clean_statementContext,0)


        def BREAK(self):
            return self.getToken(wenyanParser.BREAK, 0)

        def comment(self):
            return self.getTypedRuleContext(wenyanParser.CommentContext,0)


        def getRuleIndex(self):
            return wenyanParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = wenyanParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.declare_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.define_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.print_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.for_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.function_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.if_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.return_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 93
                self.math_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 94
                self.assign_statement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 95
                self.import_statement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 96
                self.object_statement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 97
                self.pick_up_statement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 98
                self.array_statement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 99
                self.clean_statement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 100
                self.match(wenyanParser.BREAK)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 101
                self.comment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pick_up_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data(self):
            return self.getTypedRuleContext(wenyanParser.DataContext,0)


        def reference_single_statement(self):
            return self.getTypedRuleContext(wenyanParser.Reference_single_statementContext,0)


        def STRING_LITERAL(self):
            return self.getToken(wenyanParser.STRING_LITERAL, 0)

        def INT_NUM(self):
            return self.getToken(wenyanParser.INT_NUM, 0)

        def IDENTIFIER(self):
            return self.getToken(wenyanParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return wenyanParser.RULE_pick_up_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPick_up_statement" ):
                listener.enterPick_up_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPick_up_statement" ):
                listener.exitPick_up_statement(self)




    def pick_up_statement(self):

        localctx = wenyanParser.Pick_up_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pick_up_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(wenyanParser.T__0)
            self.state = 105
            self.data()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==wenyanParser.T__1:
                self.state = 106
                self.match(wenyanParser.T__1)
                self.state = 107
                _la = self._input.LA(1)
                if not(((((_la - 3)) & ~0x3f) == 0 and ((1 << (_la - 3)) & ((1 << (wenyanParser.T__2 - 3)) | (1 << (wenyanParser.T__3 - 3)) | (1 << (wenyanParser.STRING_LITERAL - 3)) | (1 << (wenyanParser.IDENTIFIER - 3)) | (1 << (wenyanParser.INT_NUM - 3)))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==wenyanParser.T__22:
                self.state = 110
                self.reference_single_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_cat_statement(self):
            return self.getTypedRuleContext(wenyanParser.Array_cat_statementContext,0)


        def array_push_statement(self):
            return self.getTypedRuleContext(wenyanParser.Array_push_statementContext,0)


        def getRuleIndex(self):
            return wenyanParser.RULE_array_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_statement" ):
                listener.enterArray_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_statement" ):
                listener.exitArray_statement(self)




    def array_statement(self):

        localctx = wenyanParser.Array_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_statement)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [wenyanParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.array_cat_statement()
                pass
            elif token in [wenyanParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.array_push_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_cat_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(wenyanParser.IDENTIFIER)
            else:
                return self.getToken(wenyanParser.IDENTIFIER, i)

        def PREPOSITION_YI(self, i:int=None):
            if i is None:
                return self.getTokens(wenyanParser.PREPOSITION_YI)
            else:
                return self.getToken(wenyanParser.PREPOSITION_YI, i)

        def reference_single_statement(self):
            return self.getTypedRuleContext(wenyanParser.Reference_single_statementContext,0)


        def getRuleIndex(self):
            return wenyanParser.RULE_array_cat_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_cat_statement" ):
                listener.enterArray_cat_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_cat_statement" ):
                listener.exitArray_cat_statement(self)




    def array_cat_statement(self):

        localctx = wenyanParser.Array_cat_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_cat_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(wenyanParser.T__4)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==wenyanParser.T__5 or _la==wenyanParser.IDENTIFIER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.match(wenyanParser.PREPOSITION_YI)
                self.state = 120
                self.match(wenyanParser.IDENTIFIER)
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==wenyanParser.PREPOSITION_YI):
                    break

            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==wenyanParser.T__22:
                self.state = 125
                self.reference_single_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_push_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(wenyanParser.IDENTIFIER, 0)

        def PREPOSITION_YI(self, i:int=None):
            if i is None:
                return self.getTokens(wenyanParser.PREPOSITION_YI)
            else:
                return self.getToken(wenyanParser.PREPOSITION_YI, i)

        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wenyanParser.DataContext)
            else:
                return self.getTypedRuleContext(wenyanParser.DataContext,i)


        def reference_single_statement(self):
            return self.getTypedRuleContext(wenyanParser.Reference_single_statementContext,0)


        def getRuleIndex(self):
            return wenyanParser.RULE_array_push_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_push_statement" ):
                listener.enterArray_push_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_push_statement" ):
                listener.exitArray_push_statement(self)




    def array_push_statement(self):

        localctx = wenyanParser.Array_push_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_push_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(wenyanParser.T__6)
            self.state = 129
            _la = self._input.LA(1)
            if not(_la==wenyanParser.T__5 or _la==wenyanParser.IDENTIFIER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 132 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.match(wenyanParser.PREPOSITION_YI)
                self.state = 131
                self.data()
                self.state = 134 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==wenyanParser.PREPOSITION_YI):
                    break

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==wenyanParser.T__22:
                self.state = 136
                self.reference_single_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_define_statement(self):
            return self.getTypedRuleContext(wenyanParser.Function_define_statementContext,0)


        def function_call_statement(self):
            return self.getTypedRuleContext(wenyanParser.Function_call_statementContext,0)


        def reference_single_statement(self):
            return self.getTypedRuleContext(wenyanParser.Reference_single_statementContext,0)


        def getRuleIndex(self):
            return wenyanParser.RULE_function_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_statement" ):
                listener.enterFunction_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_statement" ):
                listener.exitFunction_statement(self)




    def function_statement(self):

        localctx = wenyanParser.Function_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_statement)
        self._la = 0 # Token type
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [wenyanParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.function_define_statement()
                pass
            elif token in [wenyanParser.T__7, wenyanParser.T__8, wenyanParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.function_call_statement()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==wenyanParser.T__22:
                    self.state = 141
                    self.reference_single_statement()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_call_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_plain_call(self):
            return self.getTypedRuleContext(wenyanParser.Function_plain_callContext,0)


        def function_nested_call(self):
            return self.getTypedRuleContext(wenyanParser.Function_nested_callContext,0)


        def getRuleIndex(self):
            return wenyanParser.RULE_function_call_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call_statement" ):
                listener.enterFunction_call_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call_statement" ):
                listener.exitFunction_call_statement(self)




    def function_call_statement(self):

        localctx = wenyanParser.Function_call_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_call_statement)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [wenyanParser.T__7, wenyanParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.function_plain_call()
                pass
            elif token in [wenyanParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.function_nested_call()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_plain_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(wenyanParser.IDENTIFIER, 0)

        def preposition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wenyanParser.PrepositionContext)
            else:
                return self.getTypedRuleContext(wenyanParser.PrepositionContext,i)


        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wenyanParser.DataContext)
            else:
                return self.getTypedRuleContext(wenyanParser.DataContext,i)


        def getRuleIndex(self):
            return wenyanParser.RULE_function_plain_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_plain_call" ):
                listener.enterFunction_plain_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_plain_call" ):
                listener.exitFunction_plain_call(self)




    def function_plain_call(self):
